--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,3 +3,9 @@
 {{ $styles := resources.Get "scss/style.scss" | toCSS | minify }}
 <link rel="stylesheet" href="{{ $styles.RelPermalink }}">
 
+<style>
+img {
+        display: block;
+        margin:  auto;
+    }
+</style>
